use the file name for XITS Math, so that the version in TL can be used

--- a/ck-general-setup.tex
+++ b/ck-general-setup.tex
@@ -110,7 +110,7 @@
   Scale=MatchLowercase
 ]{Liberation Mono}
 \def\@mathfont{XITS Math}
-\setmathfont{XITS Math}
+\setmathfont{xits-math.otf}
 %\setmathfont[range=\mathscr,Scale=MatchUppercase]{FreeSerif}
 
 % -------------------------
