convert classes to unified .dtx

--- a/math-general.sty
+++ b/math-general.sty
@@ -56,3 +56,6 @@
 \newcommand\transpose[1]{#1^{\mathrm{T}}}
 \newcommand\GL[2]{\ensuremath{\mathrm{GL}_{#1}(#2)}}
 \newcommand\SL[2]{\ensuremath{\mathrm{SL}_{#1}(#2)}}
+
+% sets of numbers
+\newcommand\units{\times}               % for use in ℂ^\units
