give less weight to the page header in short-notes classes

--- a/paper-notes.cls
+++ b/paper-notes.cls
@@ -142,13 +142,13 @@
 \setkomafont{subparagraph}{\normalfont\normalcolor\sffamily\itshape}
 \pagestyle{scrheadings}
 \AtBeginDocument{
-\clearscrheadfoot
-\let\@@title\@title
-\ihead{\normalfont\scshape\@@title}
-\chead{}
-\ohead{\pagemark}
-\cfoot[\pagemark]{}
-\setheadsepline{0.7pt}
+    \clearscrheadfoot
+    \let\@@title\@title
+    \ihead{\normalfont\scshape\color{gray}\@@title}
+    \chead{}
+    \ohead{\pagemark}
+    \cfoot[\pagemark]{}
+    \setheadsepline{0.5pt}
 }
 \RequirePackage{tikz}
 \usetikzlibrary{
