--- a/classes.dtx
+++ b/classes.dtx
@@ -362,13 +362,13 @@ version 2005/12/01 or later.
 %<*!lecture-notes>
 %    \begin{macrocode}
 \AtBeginDocument{
-	\clearscrheadfoot
-	\let\@@title\@title
-	\ihead{\normalfont\scshape\@@title}
-	\chead{}
-	\ohead{\pagemark}
-	\cfoot[\pagemark]{}
-	\setheadsepline{0.7pt}
+    \clearscrheadfoot
+    \let\@@title\@title
+    \ihead{\normalfont\scshape\color{gray}\@@title}
+    \chead{}
+    \ohead{\pagemark}
+    \cfoot[\pagemark]{}
+    \setheadsepline{0.5pt}
 }
 %    \end{macrocode}
 %</!lecture-notes>
