closure of a set

--- a/math-general.sty
+++ b/math-general.sty
@@ -57,5 +57,8 @@
 \newcommand\GL[2]{\ensuremath{\mathrm{GL}_{#1}(#2)}}
 \newcommand\SL[2]{\ensuremath{\mathrm{SL}_{#1}(#2)}}
 
+% topology
+\newcommand\setclosure\overline         % closure of a subset of a topological space
+
 % sets of numbers
 \newcommand\units{\times}               % for use in ℂ^\units
