--- a/math-general.sty
+++ b/math-general.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-general}[2011/04/04 Useful commands for writing texts about mathematics]
+\ProvidesPackage{math-general}[2011/09/26 Useful commands for writing texts about mathematics]
 
 % greek letters
 \newunicodechar{ϱ}{ρ}
@@ -16,6 +16,8 @@
 \DeclareMathOperator\sign{sgn}      % sign
 
 \newcommand\abs[1]{\left|#1\right|} % absolute value
+
+\newcommand\res[2]{\mathchoice{\left.#1\right|_{#2}}{#1|_{#2}}{#1|_{#2}}{#1|_{#2}}}
 
 % arrows
 \newcommand\onto\twoheadrightarrow  % surjections
@@ -59,6 +61,7 @@
 
 % topology
 \newcommand\setclosure\overline         % closure of a subset of a topological space
+\newcommand\sheaf\mathcal
 
 % sets of numbers
 \newcommand\units{\times}               % for use in ℂ^\units
