--- a/classes.dtx
+++ b/classes.dtx
@@ -418,6 +418,13 @@ version 2005/12/01 or later.
     row sep=2em,
     text height=1.5ex,
     text depth=0.25ex}}
+\tikzset{spaced commutative diagram/.style={
+    commutative diagram,    
+    column sep=3em,
+    row sep=3em}}
+\tikzset{commutative diagram arrows/.style={
+    ->,
+    font=\small}}
 \tikzset{descr/.style={fill=white,inner sep=1pt}}
 %    \end{macrocode}
 % 
