split off homological algebra; added various commands

--- a/math-ca.sty
+++ b/math-ca.sty
@@ -1,6 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{math-ca}[2011/04/04 Useful commands for writing texts about commutative algebra]
 \RequirePackage{math-general}
+\RequirePackage{math-homalg}
 
 % ideals
 \newcommand\ideal\mathfrak
