--- a/math-general.sty
+++ b/math-general.sty
@@ -52,6 +52,8 @@
 % vector spaces
 \newcommand\linspan[1]{\left\langle #1 \right\rangle}
 \renewcommand\vec\mathsf
+\newcommand\ip[2]{\left\langle #1,\,#2 \right\rangle} % inner product
+\newcommand\orth\perp
 
 % matrices
 \newcommand\idm[1][]{\mathrm{Id}_{#1}}    % identity matrix
@@ -62,6 +64,10 @@
 % topology
 \newcommand\setclosure\overline         % closure of a subset of a topological space
 \newcommand\sheaf\mathcal
+\newcommand\cover\mathfrak
 
 % sets of numbers
 \newcommand\units{\times}               % for use in ℂ^\units
+
+% category theory
+\newcommand\cat{\mathbf}
