categories and some fixes

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -4,3 +4,10 @@
 
 \renewcommand\O{\sheaf O}
 \newcommand\shHom{\sheaf{Hom}}
+
+\newcommand\sheafcat{\mathbfscr}
+\newcommand\stack\sheafcat
+
+\newcommand\catSchemes{\@catover{Sch}}          % category of schemes
+\newcommand\catAffine{\@catover{Aff}}           % category of affine schemes
+\newcommand\catStacks[1]{\catover{Stacks}{#1}}  % category of stacks
