--- a/math-general.sty
+++ b/math-general.sty
@@ -60,6 +60,7 @@
 \newcommand\transpose[1]{#1^{\mathrm{T}}}
 \newcommand\GL[2]{\ensuremath{\mathrm{GL}_{#1}(#2)}}
 \newcommand\SL[2]{\ensuremath{\mathrm{SL}_{#1}(#2)}}
+\newcommand\PGL[2]{\ensuremath{\mathrm{PGL}_{#1}(#2)}}
 
 % topology
 \newcommand\setclosure\overline         % closure of a subset of a topological space
