--- a/math-general.sty
+++ b/math-general.sty
@@ -56,7 +56,8 @@
 \newcommand\orth\perp
 
 % matrices
-\newcommand\idm[1][]{\mathrm{Id}_{#1}}    % identity matrix
+\newcommand\idm[1][]{\mathrm{Id}_{#1}}          % identity matrix
+\newcommand\diag[1]{\operatorname{diag}(#1)}    % diagonal matrix
 \newcommand\transpose[1]{#1^{\mathrm{T}}}
 \newcommand\GL[2]{\ensuremath{\mathrm{GL}_{#1}(#2)}}
 \newcommand\SL[2]{\ensuremath{\mathrm{SL}_{#1}(#2)}}
