--- a/math-ag.sty
+++ b/math-ag.sty
@@ -14,6 +14,8 @@
 
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
 
+\newcommand\Sym[2]{\operatorname{Sym}^{#1}#2}   % symmetric product
+
 % algebraic groups
 \renewcommand\GL[2][]{\operatorname{GL}_#2\ifx#1\@empty\else(#1)\fi}
 \renewcommand\SL[2][]{\operatorname{SL}_#2\ifx#1\@empty\else(#1)\fi}
