--- a/math-ag.sty
+++ b/math-ag.sty
@@ -11,6 +11,10 @@
 \newcommand\catSchemes{\@catover{Sch}}          % category of schemes
 \newcommand\catAffine{\@catover{Aff}}           % category of affine schemes
 \newcommand\catStacks[1]{\catover{Stacks}{#1}}  % category of stacks
+\newcommand\catSheaves[1]{\cat{Sh}(#1)}         % category of sheaves
+\newcommand\catPresheaves[1]{\cat{PSh}(#1)}     % category of presheaves
+\newcommand\catAbSheaves[1]{\cat{Ab}(#1)}       % category of Abelian sheaves
+\newcommand\catAbPresheaves[1]{\cat{PAb}(#1)}   % category of Abelian presheaves
 
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
 
@@ -21,4 +25,5 @@
 \renewcommand\SL[2][]{\operatorname{SL}_#2\ifx#1\@empty\else(#1)\fi}
 \renewcommand\PGL[2][]{\operatorname{PGL}_#2\ifx#1\@empty\else(#1)\fi}
 
-
+% cohomology
+\newcommand\cech\check
