--- a/math-ag.sty
+++ b/math-ag.sty
@@ -18,6 +18,8 @@
 
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
 
+\newcommand\Grass[2]{\operatorname{Grass}(#1,#2)}   % Grassmannian
+
 \newcommand\Sym[2]{\operatorname{Sym}^{#1}#2}   % symmetric product
 
 % algebraic groups
