affine space, proj

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -16,7 +16,9 @@
 \newcommand\catAbSheaves[1]{\cat{Ab}(#1)}       % category of Abelian sheaves
 \newcommand\catAbPresheaves[1]{\cat{PAb}(#1)}   % category of Abelian presheaves
 
+\newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
+\newcommand\Proj{\operatorname{Proj}}           
 
 \newcommand\Grass[2]{\operatorname{Grass}(#1,#2)}   % Grassmannian
 
