dual vector space

--- a/math-general.sty
+++ b/math-general.sty
@@ -54,6 +54,7 @@
 \renewcommand\vec\mathsf
 \newcommand\ip[2]{\left\langle #1,\,#2 \right\rangle} % inner product
 \newcommand\orth\perp
+\newcommand\dual{∨}
 
 % matrices
 \newcommand\idm[1][]{\mathrm{Id}_{#1}}          % identity matrix
