--- a/math-general.sty
+++ b/math-general.sty
@@ -85,3 +85,8 @@
 \newcommand\catTop{\cat{Top}}
 \newcommand\catGroup{\cat{Grp}}
 \newcommand\catGroupoids{\cat{Groupoids}}
+
+% misc
+\newcommand\cocolon{%                   % colon on the right side (i.e. for an adjunction)
+    \nobreak \mskip 6muplus1mu \mathpunct {}\nonscript \mkern -\thinmuskip{:}\mskip 2mu\relax%
+}
