--- a/math-alg.sty
+++ b/math-alg.sty
@@ -1,6 +1,9 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-alg}[2011/07/29 Useful commands for writing texts about algebra in general]
+\ProvidesPackage{math-alg}[2011/11/22 Useful commands for writing texts about algebra in general]
 \RequirePackage{math-general}
+
+% categories
+\newcommand\catModules[1]{#1\text{-}\cat{Mod}}  % modules
 
 % groups
 \newcommand\symgroup{\mathfrak{S}_}         % symmetric group
