--- a/math-ag.sty
+++ b/math-ag.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-ag}[2011/04/04 Useful commands for writing texts about algebraic geometry]
+\ProvidesPackage{math-ag}[2011/11/26 Useful commands for writing texts about algebraic geometry]
 \RequirePackage{math-ca}
 
 \renewcommand\O{\sheaf O}
@@ -15,6 +15,8 @@
 \newcommand\catPresheaves[1]{\cat{PSh}(#1)}     % category of presheaves
 \newcommand\catAbSheaves[1]{\cat{Ab}(#1)}       % category of Abelian sheaves
 \newcommand\catAbPresheaves[1]{\cat{PAb}(#1)}   % category of Abelian presheaves
+\newcommand\catCoh[1]{\cat{Coh}(#1)}            % category of coherent sheaves
+\newcommand\catQCoh[1]{\cat{QCoh}(#1)}          % category of quasicoherent sheaves
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
