--- a/math-homalg.sty
+++ b/math-homalg.sty
@@ -1,5 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-homalg}[2011/10/03 Useful commands for writing texts about homological algebra]
+\ProvidesPackage{math-homalg}[2011/12/1 Useful commands for writing texts about homological algebra]
 \RequirePackage{math-general}
 
 \newcommand\cx\bullet               % dot for complexes
+
+\newcommand\hypercoh{\mathbb H}     % hypercohomology H
