--- a/math-general.sty
+++ b/math-general.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-general}[2011/11/22 Useful commands for writing texts about mathematics]
+\ProvidesPackage{math-general}[2011/12/05 Useful commands for writing texts about mathematics]
 
 % greek letters
 \newunicodechar{ϱ}{ρ}
@@ -78,7 +78,8 @@
 \def\@catover#1{\@ifnextchar[{\@@catover{#1}}{\cat{#1}}}     % Only use \catover when optional argument is present.
 \def\@@catover#1[#2]{\catover{#1}{#2}}
 \newcommand\commacat\catover            % Comma category
-\newcommand\oppcat[1]{#1^{\mathrm{op}}} % opposite categroy
+\newcommand\oppcat[1]{#1^{\mathrm{op}}} % opposite category
+\newcommand\catopp[1]{\oppcat{\cat #1}} % opposite category with automatic formatting
 
 % common categories
 \newcommand\catSet{\cat{Set}}
