categorie of Abelian groups

--- a/math-general.sty
+++ b/math-general.sty
@@ -85,6 +85,7 @@
 \newcommand\catSet{\cat{Set}}
 \newcommand\catTop{\cat{Top}}
 \newcommand\catGroup{\cat{Grp}}
+\newcommand\catAbGroup{\cat{Ab}}
 \newcommand\catGroupoids{\cat{Groupoids}}
 
 % misc
