graded piece of a filtration

--- a/math-homalg.sty
+++ b/math-homalg.sty
@@ -1,7 +1,9 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-homalg}[2011/12/01 Useful commands for writing texts about homological algebra]
+\ProvidesPackage{math-homalg}[2011/12/06 Useful commands for writing texts about homological algebra]
 \RequirePackage{math-general}
 
 \newcommand\cx\bullet               % dot for complexes
 
 \newcommand\hypercoh{\mathbb H}     % hypercohomology H
+
+\newcommand\Gr[3][]{\operatorname{Gr}_{#1}^{#2} #3} % graded pieces of a filtration
