--- a/math-alg.sty
+++ b/math-alg.sty
@@ -1,11 +1,14 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-alg}[2011/12/04 Useful commands for writing texts about algebra in general]
+\ProvidesPackage{math-alg}[2011/12/11 Useful commands for writing texts about algebra in general]
 \RequirePackage{math-general}
 
 % categories
 \newcommand\catModules[1]{#1\text{-}\cat{Mod}}      % modules
 \newcommand\catCoModules[1]{#1\text{-}\cat{coMod}}  % comodules
 \newcommand\catRep[1]{#1\text{-}\cat{Rep}}          % representations
+
+% abelian categories
+\newcommand\coim{\operatorname{coim}}               % coimage
 
 % groups
 \newcommand\symgroup{\mathfrak{S}_}             % symmetric group
