better formatting of toc entries

--- a/classes.dtx
+++ b/classes.dtx
@@ -315,6 +315,7 @@ version 2005/12/01 or later.
     \setkomafont{title}{\normalfont\normalcolor\scshape\LARGE\color{sectioningcolor}}
     \setkomafont{section}{\normalfont\normalcolor\scshape\large\color{sectioningcolor}\centering}
     \setkomafont{subsection}{\normalfont\normalcolor\scshape\color{sectioningcolor}}
+    \setkomafont{sectionentry}{\normalfont\normalcolor\scshape}
 \fi
 %    \end{macrocode}
 %</!lecture-notes>
