--- a/math-general.sty
+++ b/math-general.sty
@@ -66,7 +66,7 @@
 
 % topology
 \newcommand\setclosure\overline         % closure of a subset of a topological space
-\newcommand\sheaf\mathcal
+\newcommand\sheaf\mathscr
 \newcommand\cover\mathfrak
 
 % sets of numbers
