Claim and Question theorem environments

--- a/classes.dtx
+++ b/classes.dtx
@@ -486,6 +486,7 @@ version 2005/12/01 or later.
 %<*common>
 %    \begin{macrocode}
 \newtheorem{Fact}[Thm]{Fact}
+\newtheorem{Claim}[Thm]{Claim}
 \newtheorem{Prop}[Thm]{Proposition}
 \newtheorem{Cor}[Thm]{Corollary}
 \newtheorem{CorAd}[Thm]{Corollary*}
@@ -503,6 +504,7 @@ version 2005/12/01 or later.
 \newtheorem{RemAd}[Thm]{Remark*}
 \newtheorem{Rems}[Thm]{Remarks}
 \newtheorem{Exercise}[Thm]{Exercise}
+\newtheorem{Q}[Thm]{Question}
 
 \declaretheorem[name=Example,sibling=Thm,qed={\lower-0.3ex\hbox{$◃$}}]{Ex}
 \declaretheorem[name=Examples,sibling=Ex,qed={\lower-0.3ex\hbox{$◃$}}]{Exs}
