--- a/math-homalg.sty
+++ b/math-homalg.sty
@@ -7,3 +7,7 @@
 \newcommand\hypercoh{\mathbb H}     % hypercohomology H
 
 \newcommand\Gr[3][]{\operatorname{Gr}_{#1}^{#2} #3} % graded pieces of a filtration
+
+\DeclareMathOperator\Tor{Tor}
+\DeclareMathOperator\Ext{Ext}
+
