--- a/math-alg.sty
+++ b/math-alg.sty
@@ -16,6 +16,7 @@
 % Lie algebras
 \newcommand\liealg{\mathfrak}                   % Lie algebra
 \newcommand\liealgof[1]{\operatorname{Lie}(#1)} % Lie algebra of a group
+\newcommand\liesl[1]{\liealg{sl}_{#1}}
 
 % Field extensions
 \newcommand\Gal[2]{\operatorname{Gal}(#1/#2)}   % Galois group
