some more math commands

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -3,7 +3,8 @@
 \RequirePackage{math-ca}
 
 \renewcommand\O{\sheaf O}
-\newcommand\shHom{\sheaf{Hom}}
+\newcommand\sheafHom{\sheaf{Hom}}
+\let\shHom\sheafHom                             % depreciated
 
 \newcommand\sheafcat{\mathbfscr}
 \newcommand\stack\sheafcat
