--- a/math-general.sty
+++ b/math-general.sty
@@ -14,6 +14,7 @@
 \DeclareMathOperator\rank{rank}
 \DeclareMathOperator\supp{supp}     % support
 \DeclareMathOperator\sign{sgn}      % sign
+\DeclareMathOperator\trace{tr}      % trace
 
 \newcommand\abs[1]{\left|#1\right|} % absolute value
 
@@ -55,6 +56,8 @@
 \newcommand\ip[2]{\left\langle #1,\,#2 \right\rangle} % inner product
 \newcommand\orth\perp
 \newcommand\dual{∨}
+
+\newcommand\SymAlg{\operatorname{Sym}}
 
 % matrices
 \newcommand\idm[1][]{\mathrm{Id}_{#1}}          % identity matrix
