--- a/math-ag.sty
+++ b/math-ag.sty
@@ -18,6 +18,7 @@
 \newcommand\catAbPresheaves[1]{\cat{PAb}(#1)}   % category of Abelian presheaves
 \newcommand\catCoh[1]{\cat{Coh}(#1)}            % category of coherent sheaves
 \newcommand\catQCoh[1]{\cat{QCoh}(#1)}          % category of quasicoherent sheaves
+\newcommand\catPerf[1]{\cat{Perf}(#1)}          % category of perfect sheaves
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
