--- a/math-general.sty
+++ b/math-general.sty
@@ -1,13 +1,13 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{math-general}[2011/12/05 Useful commands for writing texts about mathematics]
 
-% greek letters
+% Normalize Greek letters
 \newunicodechar{ϱ}{ρ}
 \newunicodechar{ϑ}{θ}
 \newunicodechar{ϕ}{φ}
 
 % constants
-\renewcommand\i{\mathfrak i}        % imaginary unit
+\renewcommand\i{\mathfrak i}        % imaginary unit (was dot-less i)
 \newcommand\e{\mathrm e}
 
 % often used operators
