category of vector spaces

--- a/math-general.sty
+++ b/math-general.sty
@@ -89,6 +89,7 @@
 \newcommand\catTop{\cat{Top}}
 \newcommand\catGroup{\cat{Grp}}
 \newcommand\catAbGroup{\cat{Ab}}
+\newcommand\catVect[1][]{\cat{Vect}_{#1}}
 \newcommand\catGroupoids{\cat{Groupoids}}
 
 % misc
