--- a/math-ag.sty
+++ b/math-ag.sty
@@ -19,6 +19,7 @@
 \newcommand\catCoh[1]{\cat{Coh}(#1)}            % category of coherent sheaves
 \newcommand\catQCoh[1]{\cat{QCoh}(#1)}          % category of quasicoherent sheaves
 \newcommand\catPerf[1]{\cat{Perf}(#1)}          % category of perfect sheaves
+\newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
