--- a/math-general.sty
+++ b/math-general.sty
@@ -96,3 +96,4 @@
 \newcommand\cocolon{%                   % colon on the right side (i.e. for an adjunction)
     \nobreak \mskip 6muplus1mu \mathpunct {}\nonscript \mkern -\thinmuskip{:}\mskip 2mu\relax%
 }
+\newcommand\powerseries[2]{#1\lBrack #2\rBrack} % power series
