--- a/math-ag.sty
+++ b/math-ag.sty
@@ -39,3 +39,4 @@
 
 % perverse sheaves
 \newcommand\perv[1][p]{{}^{#1}\mkern-1mu}
+\newcommand\singsupp{\operatorname{singsupp}}   % singular support of a sheaf
