better qcoh category macro

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -16,8 +16,8 @@
 \newcommand\catPresheaves[1]{\cat{PSh}(#1)}     % category of presheaves
 \newcommand\catAbSheaves[1]{\cat{Ab}(#1)}       % category of Abelian sheaves
 \newcommand\catAbPresheaves[1]{\cat{PAb}(#1)}   % category of Abelian presheaves
-\newcommand\catCoh[1]{\cat{Coh}(#1)}            % category of coherent sheaves
-\newcommand\catQCoh[1]{\cat{QCoh}(#1)}          % category of quasicoherent sheaves
+\newcommand\catCoh[2][]{\cat{Coh}^{#1}(#2)}     % category of coherent sheaves
+\newcommand\catQCoh[2][]{\cat{QCoh}^{#1}(#2)}   % category of quasicoherent sheaves
 \newcommand\catPerf[1]{\cat{Perf}(#1)}          % category of perfect sheaves
 \newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
 
